<resources>
    <string name="app_name">GPTT</string>
    <string name="allPattern">*</string>
    <string name="trxResponsePattern">/trx_transaction</string>
    <string-array name="services">
        <item>Cardinal</item>
        <item>Paycom</item>
    </string-array>
    <string-array name="cardinal_opts">
        <item>Auth</item>
        <item>Capture</item>
        <item>Sale</item>
        <item>Void</item>
    </string-array>
    <string-array name="paycom_opts">
        <item>Auth</item>
        <item>Sale</item>
        <item>Void</item>
    </string-array>
    <string-array name="ppp_opts">
        <item>SFTP</item>
        <item>FTPS</item>
    </string-array>
    <string-array name="countries">
        <item>US</item>
        <item>PA</item>
        <item>CR</item>
        <item>NI</item>
        <item>HN</item>
        <item>SV</item>
        <item>GT</item>
    </string-array>
    <string-array name="us_states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HA</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KA</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="cr_states">
        <item>San Jose</item>
        <item>Alajuela</item>
        <item>Heredia</item>
        <item>Cartago</item>
        <item>Puntarenas</item>
        <item>Guanacaste</item>
        <item>Limon</item>
    </string-array>
    <string-array name="pa_states">
        <item>Bocas del Toro</item>
        <item>Chiriquí</item>
        <item>Coclé</item>
        <item>Colón</item>
        <item>Darién</item>
        <item>Herrera</item>
        <item>Los Santos</item>
        <item>Panamá</item>
        <item>Veraguas</item>
    </string-array>
    <string-array name="ni_states">
        <item>Atlántico Norte</item>
        <item>Atlántico Sur</item>
        <item>Boaco</item>
        <item>Carazo</item>
        <item>Chinandega</item>
        <item>Chontales</item>
        <item>Estelí</item>
        <item>Granada</item>
        <item>Jinotega</item>
        <item>León</item>
        <item>Madriz</item>
        <item>Managua</item>
        <item>Masaya</item>
        <item>Matagalpa</item>
        <item>Nueva Segovia</item>
        <item>Río San Juan</item>
        <item>Rivas</item>
    </string-array>
    <string-array name="hn_states">
        <item>Atlántida</item>
        <item>Choluteca</item>
        <item>Colón</item>
        <item>Comayagua</item>
        <item>Copán</item>
        <item>Cortés</item>
        <item>El Paraíso</item>
        <item>Francisco Morazán</item>
        <item>Atlántida</item>
        <item>Gracias a Dios</item>
        <item>Intibucá</item>
        <item>Islas de la Bahía</item>
        <item>La Paz</item>
        <item>Lempira</item>
        <item>Ocotepeque</item>
        <item>Olancho</item>
        <item>Santa Bárbara</item>
        <item>Valle</item>
        <item>Yoro</item>
    </string-array>
    <string-array name="gt_states">
        <item>Alta Verapaz</item>
        <item>Baja Verapaz</item>
        <item>Chimaltenango</item>
        <item>Chiquimula</item>
        <item>El Progreso</item>
        <item>Escuintla</item>
        <item>Guatemala</item>
        <item>Huehuetenango</item>
        <item>Tegucigalpa</item>
        <item>Izabal</item>
        <item>Jalapa</item>
        <item>Jutiapa</item>
        <item>Petén</item>
        <item>Quetzaltenango</item>
        <item>Quiché</item>
        <item>Retalhuleu</item>
        <item>Sacatepéquez</item>
        <item>San Marcos</item>
        <item>Santa Rosa</item>
        <item>Sololá</item>
        <item>Suchitepéquez</item>
        <item>Totonicapán</item>
        <item>Zacapa</item>
    </string-array>
    <string-array name="sv_states">
        <item>San Salvador</item>
        <item>La Libertad</item>
        <item>Santa Ana</item>
        <item>Sonsonate</item>
        <item>Usulutan</item>
        <item>Cuscatlan</item>
        <item>La Paz</item>
        <item>Ahuachapan</item>
        <item>La Union</item>
        <item>San Vicente</item>
        <item>San Miguel</item>
        <item>Morazan</item>
        <item>Chalatenango</item>
        <item>Cabanas</item>
    </string-array>
    <string-array name="san_jose_cities">
        <item>San Jose</item>
        <item>Escazu</item>
        <item>Desamparados</item>
        <item>Puriscal</item>
        <item>Tarraz</item>
        <item>Aserri</item>
        <item>Mora</item>
        <item>Goicoechea</item>
        <item>Santa Ana</item>
        <item>Alajuelita</item>
        <item>Vazquez de Coronado</item>
        <item>Acosta</item>
        <item>Tibas</item>
        <item>Moravia</item>
        <item>Montes de Oca</item>
        <item>Turrubares</item>
        <item>Dota</item>
        <item>Curridabat</item>
        <item>Perez Zeledon</item>
        <item>Leon Cortes</item>
    </string-array>
    <string-array name="alajuela_cities">
        <item>Alajuela</item>
        <item>San Ramon</item>
        <item>Grecia</item>
        <item>San Mateo</item>
        <item>Atenas</item>
        <item>Naranjo</item>
        <item>Palmares</item>
        <item>Poas</item>
        <item>Orotina</item>
        <item>San Carlos</item>
        <item>Zarcero</item>
        <item>Valverde Vega</item>
        <item>Upala</item>
        <item>Los Chiles</item>
        <item>Guatuso</item>
    </string-array>
    <string-array name="heredia_cities">
        <item>Heredia</item>
        <item>Barva</item>
        <item>Santo Domingo</item>
        <item>Santa Barbara</item>
        <item>San Rafael</item>
        <item>San Isidro</item>
        <item>Belen</item>
        <item>Flores</item>
        <item>Parrita</item>
        <item>Corredores</item>
        <item>Hojancha</item>
    </string-array>
    <string-array name="cartago_cities">
        <item>Cartago</item>
        <item>Paraiso</item>
        <item>La Union</item>
        <item>Jimenez</item>
        <item>Turrialba</item>
        <item>Alvarado</item>
        <item>Oreamuno</item>
        <item>El Guarco</item>
        <item>San Pablo</item>
        <item>Sarapiqui</item>
        <item>Garabito</item>
    </string-array>
    <string-array name="puntarenas_cities">
        <item>Puntarenas</item>
        <item>Esparza</item>
        <item>Buenos Aires</item>
        <item>Montes de Oro</item>
        <item>Osa</item>
        <item>Aguirre</item>
        <item>Golfito</item>
        <item>Coto Brus</item>
        <item>Nandayure</item>
        <item>La Cruz</item>
    </string-array>
    <string-array name="guanacaste_cities">
        <item>Liberia</item>
        <item>Nicoya</item>
        <item>Santa Cruz</item>
        <item>Bagaces</item>
        <item>Carrillo</item>
        <item>Canhas</item>
        <item>Abangares</item>
        <item>Tilaran</item>
    </string-array>
    <string-array name="limon_cities">
        <item>Limon</item>
        <item>Pococi</item>
        <item>Siquirres</item>
        <item>Talamanca</item>
        <item>Matina</item>
        <item>Guacimo</item>
    </string-array>
    <string name="action_websearch">Search the web</string>
    <string name="action_settings">Settings</string>
    <string name="action_restoreDefaultValues">Restore defaults</string>
    <string name="action_startService">Http Start</string>
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="AddressLine1Label">Address Line 1</string>
    <string name="addressLine2Label">Address Line 2</string>
    <string name="addressStateLabel">State</string>
    <string name="addressCityLabel">City</string>
    <string name="addressCountryLabel">Country</string>
    <string name="addressPostalCode">Postal Code</string>
    <string name="userNameLabel">User Name</string>
    <string name="passwordLabel">Password</string>
    <string name="keyIdLabel">Key Id</string>
    <string name="keyLabel">key</string>
    <string name="directPosLabel">Direct POS</string>
    <string name="braowserRedirectLabel">Browser Redirect</string>
    <string name="sendLabel">Send</string>
    <string name="orderIdLabel">Order Id</string>
    <string name="transactionIdLabel">Transaction Id</string>
    <string name="processor_label">Processor</string>
    <string name="ccNumber_label">CC Number</string>
    <string name="amount_label">Amount</string>
    <string name="cvv_label">CVV</string>
    <string name="expDate_label">Exp Date</string>
</resources>